Prevent post button text from wrapping

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,8 +1,12 @@
+.footer {
+  margin-top: auto;
+}
+
 .footer__copyright {
   display: flex;
   justify-content: center;
   padding: 60px 0;
-  margin: 0;
+  margin: auto 0 0;
   color: #212121;
   opacity: 0.7;
   line-height: 1;
